force-app/main/default/objects/Pricebook2/recordTypes/Brazil.recordType-meta.xml
<RecordType>
    <fullName>Brazil</fullName>
    <active>true</active>
    <description>Brazil</description>
    <label>Brazil</label>
</RecordType>