force-app/main/default/objects/Pricebook2/recordTypes/Price_Book_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Price_Book_EMEA</fullName>
    <active>true</active>
    <label>EMEA</label>
</RecordType>