force-app/main/default/objects/Pricebook2/recordTypes/Price_Book_NACA.recordType-meta.xml
<RecordType>
    <fullName>Price_Book_NACA</fullName>
    <active>true</active>
    <description>Price Book for North America</description>
    <label>NACA</label>
</RecordType>