force-app/main/default/objects/Pricebook2/listViews/Active_Price_Books.listView-meta.xml
<ListView>
    <fullName>Active_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>SAP_Code__c</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.IS_ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Price Books</label>
</ListView>