force-app/main/default/objects/Pricebook2/listViews/NACA_Price_Books.listView-meta.xml
<ListView>
    <fullName>NACA_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>SAP_Code__c</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAP_Code__c</field>
        <operation>contains</operation>
        <value>NACA</value>
    </filters>
    <label>NACA Price Books</label>
</ListView>