force-app/main/default/objects/Pricebook2/listViews/SA_BR.listView-meta.xml
<ListView>
    <fullName>SA_BR</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>SAP_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>SA BR</label>
</ListView>